# BrainTumorMRI

./: .dockerignore  .gitignore  AGENTS.md  DATASET_CARD.md  Dockerfile  Dockerfile.gpu  LICENSE  MODEL_CARD.md  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
app/: gradio_app.py
configs/: convnext_base_mtl.yaml  convnext_tiny_mtl.yaml  convnext_tiny_seg15_wd1e4_mtl.yaml  resnet50_mtl.yaml
docs/: docker.md  runbook.md  server-4090.md
reports/: history_analysis.md  model_comparison.md  multiseed_convnext_tiny.md  report.md  threshold_analysis.md
scripts/: analyze_history.py  analyze_thresholds.py  compare_results.py  docker_build.sh  docker_build_gpu.sh  docker_evaluate_gpu.sh  docker_run_demo.sh  docker_run_demo_gpu.sh  docker_train_gpu.sh  download_dataset.py  evaluate_best.sh  make_failure_grid.py  make_gradcam_grid.py  make_prediction_grid.py  make_report_assets.sh  plot_calibration.py  plot_training_curves.py  preflight.py  preflight.sh  run_multiseed.py  train_full.sh  train_smoke_1epoch.sh
src/brain_tumor_mri/: data.py  evaluate.py  explain.py  metrics.py  predict.py  preprocessing.py  runtime.py  train.py
src/brisc_mtl/: __init__.py  config.py  data.py  evaluate.py  metrics.py  model.py  predict.py  runtime.py  train.py  utils.py
tests/: test_data.py  test_metrics.py  test_runtime.py
