[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brisc-multitask-tumor-detection"
version = "0.1.0"
description = "PyTorch + MONAI multitask brain tumor classification and segmentation on BRISC 2025."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "monai>=1.3",
  "timm>=0.9.16",
  "kagglehub>=0.2.9",
  "numpy>=1.24",
  "pandas>=2.0",
  "pillow>=10.0",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
